# rust_play

./: .gitignore  Cargo.toml  Dockerfile  README.md
grpc/: Cargo.toml  build.rs
grpc/proto/: greeting.proto
grpc/src/: client.rs  server.rs
input_args/: Cargo.toml
input_args/src/: clap_envs.rs  envs.rs
math/src/: main.rs
oop/: Cargo.toml
oop/src/: main.rs
src/: main.rs
src/client/: run_client.rs
src/server/: run_server.rs
websocket/: Cargo.toml  README.md
websocket/src/client/: run_client.rs
websocket/src/server/: run_server.rs
