[package]
name = "input_args"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "envs"
path = "src/envs.rs"

[[bin]]
name = "clap_envs"
path = "src/clap_envs.rs"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
