[package]
name = "rust_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/run_server.rs"

[[bin]]
name = "client"
path = "src/client/run_client.rs"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
socket2 = "0.4.4"
